<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="apk_name">万通在线</string>
    <string name="apk_name_share">我正在使用OK!万通在线软件，可能是东半球更好的在线教育APP...</string>

    <string name="user_login">用户登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="go_login">去登录</string>
    <string name="go_register">去注册</string>
    <string name="hint_userName">用户邮箱/手机号</string>
    <string name="hint_login_passWord">密码</string>
    <string name="hint_register_passWord">6-18位字母或数字</string>
    <string name="agreement"><u>我已同意并阅读《万通在线软件注册协议》</u></string>
    <string name="new_user_register">新用户注册</string>

    <string name="home">推荐</string>
    <string name="course">课程</string>
    <string name="home_mine">我的</string>
    <string name="home_community">社区</string>
    <string name="live">直播</string>


    <!--<string name="download">离线下载</string>-->

    <string name="myOrder">我的订单</string>
    <string name="myCollect">我的收藏</string>
    <string name="personal_account">个人账户</string>
    <string name="system_notice">系统消息</string>
    <string name="opinion_feedback">意见反馈</string>
    <string name="system_setting">系统设置</string>
    <string name="exit_account">退出登录</string>
    <string name="hint_mobile">手机号</string>
    <string name="hint_email">邮箱</string>
    <string name="hint_confirm_passWord">确认密码</string>
    <string name="major">按专业</string>
    <string name="teacher">按讲师</string>
    <string name="sort">按排序</string>
    <string name="system_wifi">仅供WIFI下观看和离线下载</string>
    <string name="system_eliminate">清除软件缓存</string>
    <string name="system_edition">检测到新版本</string>
    <string name="system_about">关于</string>
    <string name="system_set">系统设置</string>
    <string name="about_us">关于我们</string>
    <string name="about_software">万通在线</string>
    <string name="about_version">v 3.08</string>
    <string name="about_knowledge">传播知识的力量</string>
    <string name="about_brief">2010-2015 北京易知路科技有限公司 版本所有\n京公网备11010802011695号 京ICP备13029607</string>
    <string name="about_welcome">欢迎页</string>
    <string name="recommend_small">小编推荐</string>
    <string name="recommend_hot">热门课程</string>
    <string name="confirm_order">确认订单</string>
    <string name="order_number">订单号 : </string>
    <string name="order_success">下单成功 !</string>
    <string name="order_total">订单总额 ：</string>
    <string name="promptly_pay">立即支付</string>
    <string name="APPROVE">待处理</string>
    <string name="INIT">确认并支付</string>
    <string name="SUCCESS">已完成</string>
    <string name="REFUND">已退款</string>
    <string name="CANCEL">已取消</string>
    <string name="DELETE">删除</string>
    <string name="empty">清空</string>
    <string name="myCollection">我的收藏</string>
    <string name="sliding_course">我的课程</string>
    <string name="downloading">下载中</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="industry_information">行业资讯</string>
    <string name="purchase">立即购买</string>
    <string name="introduce">介绍</string>
    <string name="course_introduce">课程介绍</string>
    <string name="course_zhang">课程章节</string>
    <string name="course_discuss">讨论区</string>
    <string name="personal_head">头像</string>
    <string name="personal_name">昵称</string>
    <string name="personal_pwd">密码</string>
    <string name="personal_sex">性别</string>
    <string name="personal_phone">手机号</string>
    <string name="personal_autograph">个性签名</string>
    <string name="personal_nname">姓名</string>
    <string name="success">恭喜您，支付已成功!</string>
    <string name="study">马上去学习</string>
    <string name="account_balance">我的账户余额</string>
    <string name="account_detail">账户明细</string>
    <string name="account_consume">消费</string>
    <string name="details">最新动态</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_course">搜索课程</string>
    <string name="search_comm">搜索小组</string>
    <string name="search_topic">搜索话题</string>
    <string name="search_wenzhang">搜索文章</string>
    <string name="search_text">搜索</string>
    <string name="pwd_newpwd">新密码</string>
    <string name="pwd_oldpwd">旧密码</string>
    <string name="pwd_input">再输入一次</string>
    <string name="pwd_correctpwd">请输入正确密码</string>
    <string name="feedback_information">反馈信息</string>
    <string name="feedback_content">请写下您的反馈内容：</string>
    <string name="feedback_contact">您的联系方式：</string>
    <string name="feedback_point_out">为了更好的解决您反馈的信息，请尽量在出现问题的网络环境下进行反馈!</string>
    <string name="feedback_hint">QQ/邮箱/手机号</string>
    <string name="feedback">一键反馈</string>
    <string name="share_arrive">分享到</string>
    <string name="buy_course">所购课程</string>
    <string name="pay_mode">支付方式</string>
    <string name="account_message">结算信息</string>
    <string name="alipay_pay">支付宝钱包支付</string>
    <string name="tuijian_alipay">推荐支付宝用户使用</string>
    <string name="wx_pay">微信支付</string>
    <string name="tuijian_wxpay">推荐已安装微信的用户使用</string>
    <string name="order_price">订单总价 : </string>
    <string name="reality_order_price">实付订单金额 : </string>
    <string name="lecturer">讲师</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="forget_pass">忘记密码</string>
    <string name="gravity_left">left</string>
    <string name="gravity_center">center</string>
    <string name="gravity_right">right</string>
    <string name="third_login">第三方登录</string>
    <string name="hint_note_code">验证码</string>
    <string name="obtain_code">获取验证码</string>
    <string name="email_regist">邮箱注册</string>
    <string name="pass_retrieve">找回密码</string>
    <string name="confirm">确认</string>
    <string name="discount_coupon">购课券</string>
    <string name="voucher">代金券</string>
    <string name="available_coupon">可使用</string>
    <string name="past_coupon">已过期</string>
    <string name="number">编	   号 :</string>
    <string name="limited">有效期 :</string>
    <string name="no_available_coupon">无可用优惠券</string>
    <string name="no_past_coupon">无已过期优惠券</string>
    <string name="no_available_voucher">无可用代金券</string>
    <string name="no_used_coupon">无已用优惠券</string>
    <string name="no_past_voucher">无已过期代金券</string>
    <string name="no_used_voucher">无已使用代金券</string>
    <string name="apply_my_coupon">使用购课券 : </string>
    <string name="apply_my_cou">请选择</string>
    <string name="accout_money">账户金额 ：</string>
    <string name="need_pay">还需支付 ：</string>
    <string name="change_head">更换头像</string>
    <string name="remove_binding">第三方账户绑定</string>
    <string name="relieve_binding">解除绑定</string>
    <string name="immediately_binding">立即绑定</string>
    <string name="getting_prepayid">正在获取预支付订单</string>
    <string name="app_tip">提示</string>
    <string name="camera_shoot">相机拍摄</string>
    <string name="phone_photo">手机相册</string>
    <string name="isFree">试听</string>
    <string name="range">范	   围 :</string>
    <string name="change_password">修改密码</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="study_statistics">学习统计</string>
    <string name="signature">这个家伙很懒,什么都没有写...</string>
    <string name="liji_look">立即观看</string>
    <string name="user_agreement">用户注册协议</string>
    <string name="no_discuss">还没有评论,快去说两句</string>
    <string name="cancel">取消</string>
    <string name="no_course">没有相关课程</string>
    <string name="no_article">没有相关文章</string>
    <string name="zhuanghu_yue">您还没有账户余额</string>
    <string name="discount_couu">优惠券</string>
    <string name="free">免费</string>
    <string name="subject">科目</string>
    <string name="capability_assessment">能力评估</string>
    <string name="examination_record">考试记录</string>
    <string name="zujuan_test">组卷模拟测试</string>
    <string name="zujuan_simple">简单</string>
    <string name="minute">分钟</string>
    <string name="into_exam">进入考试</string>
    <string name="my_fragment_money">我的钱包</string>
    <string name="exam_message">行业资讯</string>
    <string name="course_theacher">课程讲师</string>
    <string name="community">社区</string>
    <string name="gallery">考试</string>
    <string name="note_code_phone">手机验证码</string>
    <string name="note_code_email">邮箱验证码</string>
    <string name="my_live">我的直播</string>
    <string name="gong">共</string>
    <string name="note">注：此结果不包含简答题结果（以灰色标识）！</string>
    <string name="binding_email">绑定邮箱</string>
    <string name="set_update">版本升级\n有新的版本需要更新</string>
    <string name="set_yes">是</string>
    <string name="set_no">否</string>
    <string name="study_login">登陆次数</string>
    <string name="study_ci">次</string>
    <string name="study_exam">参加考试</string>
    <string name="study_cishu">学习次数</string>
    <string name="study_pinglun">发表评论</string>
    <string name="study_login_last">上次登录</string>
    <string name="study_regist">注册时间</string>
    <string name="study_acm">系统公告</string>
    <string name="load_error">加载出错</string>
    <string name="pay_success">支付成功</string>
    <string name="down_list">下载列表</string>

    <!--抽屉-->
    <string name="no_login">未登录</string>


    <!-- 教师列表-->
    <string name="course_teachers">课程讲师</string>

    <!--讲师详情-->
    <string name="allcourses">所有课程</string>
    <string name="course_details">教师详情</string>

    <!--我的钱包-->
    <string name="personacont">个人账户</string>
    <string name="invitation_reward">邀请与奖励</string>
    <string name="currentintegral">当前积分</string>
    <string name="withdrawals">申请结算</string>
    <string name="mywallet">我的钱包</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="answer_skip">跳过</string>
    <string name="answer_right">回答正确</string>
    <string name="answer_wrong">回答错误</string>
    <string name="no_choice">您还未选择任何答案</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>