<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/comment_layout"
        android:layout_width="match_parent"
        android:layout_height="125px"
        android:background="@color/color_main">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="40px" />


        <TextView
            android:id="@+id/gallery_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="130px"
            android:gravity="center"
            android:text="@string/gallery"
            android:textColor="@color/white"
            android:textSize="30px" />

        <TextView
            android:id="@+id/community_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30px"
            android:gravity="center"
            android:text="@string/community"
            android:textColor="@color/white"
            android:textSize="30px" />

        <ImageView
            android:id="@+id/user_head_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:src="@drawable/defined_user_head" />
    </RelativeLayout>
</LinearLayout>