<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <!-- title布局 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <include layout="@layout/toolbar_layout"></include>

        <LinearLayout
            android:id="@+id/fragment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"/>

        <!-- 底部导航栏的布局 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="112px"
            android:background="@color/color_f1">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="10px">

                <RadioButton
                    android:id="@+id/home_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:checked="true"
                    android:drawableTop="@drawable/btn_home_bg"
                    android:gravity="center"
                    android:text="@string/home"
                    android:textColor="@color/tab_text_bg"
                    android:textSize="29px" />

                <RadioButton
                    android:id="@+id/course_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/btn_find_bg"
                    android:gravity="center"
                    android:text="@string/course"
                    android:textColor="@color/tab_text_bg"
                    android:textSize="29px" />

                <RadioButton
                    android:id="@+id/live_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/btn_live_bg"
                    android:gravity="center"
                    android:text="@string/live"
                    android:textColor="@color/tab_text_bg"
                    android:textSize="29px" />

                <RadioButton
                    android:id="@+id/record_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/btn_record_bg"
                    android:gravity="center"
                    android:text="@string/community"
                    android:textColor="@color/tab_text_bg"
                    android:textSize="29px" />

                <RadioButton
                    android:id="@+id/download_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@drawable/btn_download_bg"
                    android:gravity="center"
                    android:text="@string/home_mine"
                    android:textColor="@color/tab_text_bg"
                    android:textSize="29px" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left">

        <include layout="@layout/fragment_sliding_meun"></include>
    </FrameLayout>
</android.support.v4.widget.DrawerLayout>