<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!-- 简单模块 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_e5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y55"
        android:background="@color/white"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x15"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zujuan_test"
                android:textColor="@color/color_33"
                android:textSize="@dimen/x15" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x15"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/difficult_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/zujuan_simple" />

                <ImageView
                    android:id="@+id/difficult_to_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x5"
                    android:background="@mipmap/stars" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x23"
                    android:text="60"
                    android:textColor="@color/color_EBA011"
                    android:textSize="@dimen/x10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minute"
                    android:textColor="@color/color_C2"
                    android:textSize="@dimen/x11" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/intoExam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x9"
            android:layout_marginRight="@dimen/x9"
            android:background="@mipmap/continue_study_bg"
            android:gravity="center"
            android:text="@string/into_exam"
            android:textColor="@color/color_3E83E5"
            android:textSize="@dimen/x10" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_e5" />
</LinearLayout>